--- a/HomeBudget.App/Resources/Languages/AppResource.en.resx
+++ b/HomeBudget.App/Resources/Languages/AppResource.en.resx
@@ -156,26 +156,26 @@
   <data name="ReportType_Graph" xml:space="preserve">
     <value>Graph</value>
   </data>
-  <data name="ReportSortType_Date" xml:space="preserve">
+  <data name="ReportFilterType_Date" xml:space="preserve">
     <value>Date</value>
   </data>
-  <data name="ReportSortType_Category" xml:space="preserve">
+  <data name="ReportFilterType_Category" xml:space="preserve">
     <value>Category</value>
-  </data>
-  <data name="ReportSortType_None" xml:space="preserve">
-    <value>None</value>
-  </data>
-  <data name="ReportFilterType_Asc" xml:space="preserve">
-    <value>Ascending</value>
-  </data>
-  <data name="ReportFilterType_Desc" xml:space="preserve">
-    <value>Descending</value>
-  </data>
-  <data name="ReportFilterType_MostUse" xml:space="preserve">
-    <value>MostUse</value>
   </data>
   <data name="ReportFilterType_None" xml:space="preserve">
     <value>None</value>
+  </data>
+  <data name="ReportSortDirectoryType_Asc" xml:space="preserve">
+    <value>Ascending</value>
+  </data>
+  <data name="ReportSortDirectoryType_Desc" xml:space="preserve">
+    <value>Descending</value>
+  </data>
+  <data name="ReportSortType_MostUse" xml:space="preserve">
+    <value>MostUse</value>
+  </data>
+  <data name="ReportSortType_Price" xml:space="preserve">
+    <value>Price</value>
   </data>
   <data name="ReportGraphType.Time" xml:space="preserve">
     <value>In time</value>
