--- a/HomeBudget.App/Resources/Languages/AppResource.en.resx
+++ b/HomeBudget.App/Resources/Languages/AppResource.en.resx
@@ -153,7 +153,7 @@
   <data name="ReportType_Table" xml:space="preserve">
     <value>Table</value>
   </data>
-  <data name="ReportType_Graph" xml:space="preserve">
+  <data name="ReportType_GraphBar" xml:space="preserve">
     <value>Graph</value>
   </data>
   <data name="ReportFilterType_Date" xml:space="preserve">
@@ -188,5 +188,9 @@
   </data>
   <data name="ReportGraphType.Radial" xml:space="preserve">
     <value>Radial</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="ReportType_GraphPie" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
   </data>
 </root>
